# FlexMask-EduRanker

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data.yaml  infer.yaml  train.yaml
docs/: design.md  eda.md  methodology.md  results.md
docs/tables/: ans_correct_vs_explassess_normalized.csv  ans_vs_expl_crosstab.csv  category_counts.csv  length_by_assessment.csv  responses_per_question_counts.csv  top_misconceptions.csv
scripts/: eda.py  evaluate.py  metrics.py  optuna_tune.py  prepare_data.py  run_cv.sh
src/suffixranker/: __init__.py  data.py  ensemble.py  infer.py  mask.py  model.py  prompt.py  train.py  utils.py
tests/: test_metrics.py
